# monitoring-system

./: .gitignore  README.md  README_RUS.md
materials/: instructions_for_testing.md  instructions_for_testing_rus.md
src/: .confNet  CMakeLists.txt  Makefile  README.md  agent.h  agentCPU.cpp  agentCPU.h  agentNetwork.cpp  agentNetwork.h  agentsFactory.cpp  agentsFactory.h  commandCaller.h  kernel.cpp  kernel.h  test.cpp
src/agents/: agentCPU.cpp  agentCPU.h  agentNetwork.cpp  agentNetwork.h
src/config/: .confCPU  .confEXT  .confMEM  .confNet
src/controller/: KernelController.cpp  KernelController.h
src/core/: Agent.cpp  Agent.h  AgentsSearcher.cpp  AgentsSearcher.h  CMakeLists.txt  ConsoleLogger.h  Kernel.cpp  Kernel.h  LogRecordsWriter.cpp  LogRecordsWriter.h  SearcherObserver.h  agent.cpp  agent.h  agentsFactory.cpp  agentsFactory.h  kernel.cpp  kernel.h
src/core/agents/: Agent.cpp  Agent.h  AgentConfigReader.cpp  AgentConfigReader.h  AgentConfigWriter.cpp  AgentConfigWriter.h  CommandCaller.cpp  CommandCaller.h
src/core/agents/examples/: AgentCPU.cpp  AgentCPU.h  AgentExtra.cpp  AgentExtra.h  AgentMemory.cpp  AgentMemory.h  AgentNetwork.cpp  AgentNetwork.h
src/core/agents_src/: AgentCPU.cpp  AgentCPU.h  AgentNetwork.cpp  CommandCaller.h  agentCPU.cpp  agentCPU.h  agentMemory.h  agentNetwork.h  commandCaller.cpp  commandCaller.h  comparisons.h
src/core/interfaces/: AgentsObserver.h  ConfigReader.h  Logger.h  Observer.h  RecordsWriter.h  SearcherObserver.h
src/core/utils/: comparetype.h
src/core/workers/: AgentConfigReader.cpp  AgentConfigReader.h  AgentsFactory.cpp  AgentsFactory.h  AgentsSearcher.cpp  AgentsSearcher.h  ConsoleLogger.cpp  ConsoleLogger.h  LogRecordsWriter.cpp  LogRecordsWriter.h
src/gui/: CMakeLists.txt  MonitoringSystemWindow.cpp  MonitoringSystemWindow.h  MonitoringSystemWindow.ui  NotificationSettings.cpp  NotificationSettings.h  NotificationSettings.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  monitoringsystemwindow.cpp  monitoringsystemwindow.h  monitoringsystemwindow.ui
src/notifications/: CMakeLists.txt  CriticalNotification.cpp  CriticalNotification.h  CriticalNotificationEmail.cpp  CriticalNotificationEmail.h  CriticalNotificationTelegram.cpp  CriticalNotificationTelegram.h  Notifier.cpp  Notifier.h
src/tests/: .confTST  AgentConfigReaderTests.cpp  AgentConfigWriterTests.cpp  AgentSearcherTests.cpp  AgentsFactoryTests.cpp  AgentsSearcherTests.cpp  CMakeLists.txt  ConsoleLoggerTests.cpp  Constants.h  KernelTests.cpp  LogRecordsWriterTests.cpp  NotififcationTests.cpp  main_tests.cpp
